[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/PauseController.gd" type="Script" id=1]

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ContinueButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.4
margin_right = 73.0
margin_bottom = 20.0
text = "Continuar"
icon_align = 1

[node name="ExitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.55
anchor_right = 0.5
anchor_bottom = 0.55
margin_right = 12.0
margin_bottom = 20.0
text = "Sortir al menu"
icon_align = 1

[node name="ExitGameButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
margin_right = 12.0
margin_bottom = 20.0
text = "Sortir del joc"
icon_align = 1

[node name="Save" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.45
anchor_right = 0.5
anchor_bottom = 0.45
margin_right = 12.0
margin_bottom = 20.0
text = "Guardar"

[connection signal="pressed" from="ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="ExitGameButton" to="." method="_on_ExitGameButton_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]
